==> cosmolabs-ru/pico_st7789_fullfunctional/st7789.c <==
#include "st7789.h"
#include "hardware/spi.h"
#include "hardware/gpio.h"
#include "pico/time.h"
#include <string.h>
 #define HOR_LEN 	5	//	Alse mind the resolution of your screen!

static void ST7789_WriteCommand(uint8_t cmd)
{
	ST7789_Select();
	ST7789_DC_Clr();
	spi_write_blocking(spi0, &cmd, sizeof(cmd));
	ST7789_UnSelect();
}

static void ST7789_WriteData(uint8_t *buff, size_t buff_size)
{
	ST7789_Select();
	ST7789_DC_Set();

	// split data in small chunks because HAL can't send more than 64K at once

	while (buff_size > 0) {
		uint16_t chunk_size = buff_size > 65535 ? 65535 : buff_size;
		spi_write_blocking(spi0, buff, chunk_size);
		buff += chunk_size;
		buff_size -= chunk_size;
	}

	ST7789_UnSelect();
}

static void ST7789_WriteSmallData(uint8_t data)
{
	ST7789_Select();
	ST7789_DC_Set();
	spi_write_blocking(spi0, &data, sizeof(data));
	ST7789_UnSelect();
}

void ST7789_Init(void)
{
	#ifdef USE_DMA
		memset(disp_buf, 0, sizeof(disp_buf));
	#endif
	sleep_ms(25);
    ST7789_RST_Clr();
    sleep_ms(25);
    ST7789_RST_Set();
    sleep_ms(50);
		
    ST7789_WriteCommand(ST7789_COLMOD);		//	Set color mode
    ST7789_WriteSmallData(ST7789_COLOR_MODE_16bit);
  	ST7789_WriteCommand(0xB2);				//	Porch control
	{
		uint8_t data[] = {0x0C, 0x0C, 0x00, 0x33, 0x33};
		ST7789_WriteData(data, sizeof(data));
	}
	ST7789_SetRotation(ST7789_ROTATION);	//	MADCTL (Display Rotation)
	
	/* Internal LCD Voltage generator settings */
    ST7789_WriteCommand(0XB7);				//	Gate Control
    ST7789_WriteSmallData(0x35);			//	Default value
    ST7789_WriteCommand(0xBB);				//	VCOM setting
    ST7789_WriteSmallData(0x19);			//	0.725v (default 0.75v for 0x20)
    ST7789_WriteCommand(0xC0);				//	LCMCTRL	
    ST7789_WriteSmallData (0x2C);			//	Default value
    ST7789_WriteCommand (0xC2);				//	VDV and VRH command Enable
    ST7789_WriteSmallData (0x01);			//	Default value
    ST7789_WriteCommand (0xC3);				//	VRH set
    ST7789_WriteSmallData (0x12);			//	+-4.45v (defalut +-4.1v for 0x0B)
    ST7789_WriteCommand (0xC4);				//	VDV set
    ST7789_WriteSmallData (0x20);			//	Default value
    ST7789_WriteCommand (0xC6);				//	Frame rate control in normal mode
    ST7789_WriteSmallData (0x0F);			//	Default value (60HZ)
    ST7789_WriteCommand (0xD0);				//	Power control
    ST7789_WriteSmallData (0xA4);			//	Default value
    ST7789_WriteSmallData (0xA1);			//	Default value
	/**************** Division line ****************/

	ST7789_WriteCommand(0xE0);
	{
		uint8_t data[] = {0xD0, 0x04, 0x0D, 0x11, 0x13, 0x2B, 0x3F, 0x54, 0x4C, 0x18, 0x0D, 0x0B, 0x1F, 0x23};
		ST7789_WriteData(data, sizeof(data));
	}

    ST7789_WriteCommand(0xE1);
	{
		uint8_t data[] = {0xD0, 0x04, 0x0C, 0x11, 0x13, 0x2C, 0x3F, 0x44, 0x51, 0x2F, 0x1F, 0x1F, 0x20, 0x23};
		ST7789_WriteData(data, sizeof(data));
	}
    ST7789_WriteCommand (ST7789_INVON);		//	Inversion ON
	ST7789_WriteCommand (ST7789_SLPOUT);	//	Out of sleep mode
  	ST7789_WriteCommand (ST7789_NORON);		//	Normal Display on
  	ST7789_WriteCommand (ST7789_DISPON);	//	Main screen turned on	

	sleep_ms(50);
	ST7789_Fill_Color(BLACK);				//	Fill with Black.
}

void ST7789_Test(void)
{
	ST7789_Fill_Color(WHITE);
	sleep_ms(1000);
	ST7789_WriteString(10, 20, "Speed Test", Font_7x10, RED, WHITE);
	sleep_ms(1000);
	ST7789_Fill_Color(CYAN);
    sleep_ms(500);
	ST7789_Fill_Color(RED);
    sleep_ms(500);
	ST7789_Fill_Color(BLUE);
    sleep_ms(500);
	ST7789_Fill_Color(GREEN);
    sleep_ms(500);
	ST7789_Fill_Color(YELLOW);
    sleep_ms(500);
	ST7789_Fill_Color(BROWN);
    sleep_ms(500);
	ST7789_Fill_Color(DARKBLUE);
    sleep_ms(500);
	ST7789_Fill_Color(MAGENTA);
    sleep_ms(500);
	ST7789_Fill_Color(LIGHTGREEN);
    sleep_ms(500);
	ST7789_Fill_Color(LGRAY);
    sleep_ms(500);
	ST7789_Fill_Color(LBBLUE);
    sleep_ms(500);
	ST7789_Fill_Color(WHITE);
	sleep_ms(500);

	ST7789_WriteString(10, 10, "Font test.", Font_7x10, GBLUE, WHITE);
	ST7789_WriteString(10, 50, "Hello Steve!", Font_7x10, RED, WHITE);
	ST7789_WriteString(10, 75, "Hello Steve!", Font_7x10, YELLOW, WHITE);
	ST7789_WriteString(10, 100, "Hello Steve!", Font_7x10, MAGENTA, WHITE);
	sleep_ms(1000);

	ST7789_Fill_Color(RED);
	ST7789_WriteString(10, 10, "Rect./Line.", Font_7x10, YELLOW, BLACK);
	ST7789_DrawRectangle(30, 30, 100, 100, WHITE);
	sleep_ms(1000);

	ST7789_Fill_Color(RED);
	ST7789_WriteString(10, 10, "Filled Rect.", Font_7x10, YELLOW, BLACK);
	ST7789_DrawFilledRectangle(30, 30, 50, 50, WHITE);
	sleep_ms(1000);

	ST7789_Fill_Color(RED);
	ST7789_WriteString(10, 10, "Circle.", Font_7x10, YELLOW, BLACK);
	ST7789_DrawCircle(60, 60, 25, WHITE);
	sleep_ms(1000);

	ST7789_Fill_Color(RED);
	ST7789_WriteString(10, 10, "Filled Cir.", Font_7x10, YELLOW, BLACK);
	ST7789_DrawFilledCircle(60, 60, 25, WHITE);
	sleep_ms(1000);

	ST7789_Fill_Color(RED);
	ST7789_WriteString(10, 10, "Triangle", Font_7x10, YELLOW, BLACK);
	ST7789_DrawTriangle(30, 30, 30, 70, 60, 40, WHITE);
	sleep_ms(1000);

	ST7789_Fill_Color(RED);
	ST7789_WriteString(10, 10, "Filled Tri", Font_7x10, YELLOW, BLACK);
	ST7789_DrawFilledTriangle(30, 30, 30, 70, 60, 40, WHITE);
	sleep_ms(1000);

	//	If FLASH cannot storage anymore datas, please delete codes below.
	// ST7789_Fill_Color(WHITE);
	// ST7789_DrawImage(0, 0, 128, 128, (uint16_t *)saber);
	// sleep_ms(3000);
}
